--- a/wired/webroot/index.html
+++ b/wired/webroot/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mods</title>
+    <title>Mods</title>
 </head>
 <body>
-	<h1>FreqChange</h1>
-	<form id="freqChangeForm">
-		<input type="number" id="freq" name="freq" min="0" max="2">
-		<button type="submit">Apply</button>
-	</form>
-	<script>
-		document.getElementById('freqChangeForm').addEventListener('submit', function(event) {
-			event.preventDefault();
-			var freq = document.getElementById('freq').value;
-			fetch('/api/mods/modify/FreqChange', {
-				method: 'POST',
-				headers: {
-					'Content-Type': 'application/json',
-				},
-				body: `{"freq": ` + freq + `}`,
-			}).then(response => response.json()).then(data => console.log(data));
-		});
-	</script>
+    <header>
+        <h1>FreqChange</h1>
+    </header>
+    <form>
+        <input type="radio" id="regular" name="frequency" value="0">
+        <label for="regular">Regular</label><br>
+        <input type="radio" id="balanced" name="frequency" value="1">
+        <label for="balanced">Balanced</label><br>
+        <input type="radio" id="performance" name="frequency" value="2">
+        <label for="performance">Performance</label><br>
+        <button type="button" onclick="FreqChange_Submit()">Submit</button>
+    </form>
+    <script src="js/mods.js"></script>
 </body>
 </html>
