Re-add wired, use /data rather than /etc so the filesystem doesn't have to affected. Only freq change is implemented at the moment.

--- a/wired/webroot/index.html
+++ b/wired/webroot/index.html
@@ -20,7 +20,7 @@
         <label for="performance">Performance</label><br>
         <button type="button" onclick="FreqChange_Submit()">Submit</button>
     </form>
-    <h2>RainbowLights</h2>
+    <!-- <h2>RainbowLights</h2>
     <form>
         <input type="radio" id="disabled" name="rainbowlights" value="false">
         <label for="disabled">Disabled</label><br>
@@ -40,7 +40,7 @@
         <button type="button" onclick="BootAnim_Submit()">Submit</button>
         <br>
         <button type="button" onclick="BootAnim_Test()">Test boot animation on robot</button>
-    </form>
+    </form> -->
     </div>
     <div id="showDuringVicRestart">
         <h1>Vector is restarting... please wait</h1>
