Improve wake word setup flow

--- a/wired/webroot/index.html
+++ b/wired/webroot/index.html
@@ -42,21 +42,19 @@
         <button type="button" onclick="BootAnim_Test()">Test boot animation on robot</button>
     </form> -->
     <h2>CustomWakeWord</h2>
-    <p>Click Start Listener. Once the screen shows "Ready to listen"; click "Listen", wait for the countdown on Vector's screen, then say your desire wake-word. Repeat "Listen" at least 2 more times. Once you are done with that, press GenWakeWord to generate. Once successful, press StopListener.</p>
-    <button onclick="startListener()">
-        Start Listener
+    <div id="wakeWordStatus">
+    </div>
+    <button id="startTraining" onclick="startWakeWordFlow()">
+        Train a new wake word
     </button>
-    <button onclick="doListen()">
-        Listen (must do at least 3 times)
+    <button id="wakeWordListen" onclick="doListen()" style="display:none">
+        Listen
     </button>
-    <button onclick="startWakeWordOver()">
-        StartOver
+    <button id="startOver" onclick="startWakeWordOver()" style="display:none">
+        Start Over
     </button>
-    <button onclick="genWakeWord()">
-        GenWakeWord
-    </button>
-    <button onclick="stopListener()">
-        Stop Listener (and start Anki programs)
+    <button id="genWakeWord" onclick="genWakeWord()" style="display:none">
+        Generate Wake Word
     </button>
     </div>
     <div id="showDuringVicRestart">
