Upgrade vector-gobot to 1.2.9, little HTML things, don't show 'Start Over' button while listening

--- a/wired/webroot/index.html
+++ b/wired/webroot/index.html
@@ -122,7 +122,7 @@
         <div id="modStatus"></div>
         <div id="mods">
             <h2>Performance Profiles</h2>
-            <p>Brings noticably better SDK performance, but may cause overheating.</p>
+            <p>Brings better SDK performance, but may cause overheating.</p>
             <form>
                 <input type="radio" id="regular" name="frequency" value="0" onchange="FreqChange_Submit()">
                 <label for="regular">Regular</label>
@@ -143,6 +143,7 @@
             <button id="startOver" onclick="startWakeWordOver()" style="display:none">Start Over</button>
             <button id="genWakeWord" onclick="genWakeWord()" style="display:none">Generate Wake Word</button>
         </div>
+        <br>
     </div>
     <div id="showDuringVicRestart" class="container" style="display: none;">
         <h1>Vector is restarting... please wait</h1>
