Add wake word training tips

--- a/wired/webroot/index.html
+++ b/wired/webroot/index.html
@@ -136,6 +136,8 @@
     <!-- just completely break the "mods" div convention i had because this is different -->
     <div class="container mod-section">
         <h2>Custom Wake Word</h2>
+	<small>Tips: Say your wake word loud and clear, make sure it is at least three syllables.</small>
+	<br><br>
         <div id="wakeWordStatus"></div>
         <div class="button-container">
             <button id="startTraining" onclick="startWakeWordFlow()">Train a new wake word</button>
